<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:id="@+id/device_menu_group">        
       <item android:id="@+id/menu_rename"
              android:icon="@android:drawable/ic_menu_add"
              android:title="@string/menu_rename" />

      <item android:id="@+id/menu_delete"
              android:icon="@android:drawable/ic_menu_delete"
              android:title="@string/menu_delete" />
      
      <item android:id="@+id/menu_models_supported"
            android:icon="@android:drawable/ic_menu_help"
             android:title="@string/menu_device_info" />

       <item android:id="@+id/menu_info"
            android:icon="@android:drawable/ic_menu_help"
             android:title="@string/menu_info" />
       
       <item android:id="@+id/menu_get_data"
           android:icon="@android:drawable/ic_menu_help"
           android:title="@string/menu_get_data" />
       
       <item android:id="@+id/menu_request_config"
           android:icon="@android:drawable/ic_menu_help"
           android:title="@string/request_config" />
</group>
</menu>
