<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" 
        android:baselineAligned="false"
        android:layout_above="@+id/buttonBar">        

        <FrameLayout
            android:id="@+id/groupsFrame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.80" />
 		
        <FrameLayout
            android:id="@+id/lightsFrame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.70" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:background="@android:color/background_light" >

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonApply"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/buttonCancel"
            android:text="@string/apply" />

        <Button
            android:id="@+id/buttonNewGroup"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/add_group" />

    </RelativeLayout>

</RelativeLayout>